--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
     "autoprefixer": "^9.8.6",
+    "axios": "^0.21.1",
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "postcss": "^7.0.35",
